# ryzen_managment_linux

./: .gitmodules  README.md
plotter/: README.md  main.py  pyproject.toml
pyrymon/: README.md  config.toml  config_loader.py  data_plotter.py  main.py  pm_table_reader.py  pyproject.toml
reader/: CMakeLists.txt  Doxyfile  TODO.md  compile.sh  eye_capturer.cpp  eye_capturer.hpp  eye_diagram.cpp  eye_diagram.hpp  gui_components.cpp  gui_components.hpp  gui_render.cpp  gui_render.hpp  gui_runner.cpp  gui_runner.hpp  locked_buffer.cpp  locked_buffer.hpp  main.cpp  measure.cpp  measurement_types.hpp  plot_measure.py  pm_table_reader.cpp  pm_table_reader.hpp  prompts  realtime_guard.cpp  realtime_guard.hpp  shared_data_types.hpp  stats_utils.hpp  workloads.hpp
reader/cmake/: PGO.cmake  flags.cmake  folly.cmake  glfw.cmake  imgui.cmake  implot.cmake  spdlog.cmake
reader/doc/: 01_clocks.md  02_tsc.md  03_microbench.md  04_architecture.md  05_eye.md  prompts
reader/docs/: architecture.md
reader/python/: plot_results.py  pyproject.toml
reader/scripts/: pgo_ninja.sh
ryzen_pm_table_moonitor/: .clang-format  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md
ryzen_pm_table_moonitor/cmake/: boost.cmake  flags.cmake  glfw.cmake  imgui.cmake  implot.cmake  sanitizers.cmake  spdlog.cmake  taskflow.cmake  tomlplusplus.cmake
ryzen_pm_table_moonitor/scripts/: install_deps.sh
ryzen_pm_table_moonitor/src/: README.md  analysis.hpp  analysis_manager.cpp  analysis_manager.hpp  jitter_monitor.hpp  main.cpp  measurement_namer.cpp  measurement_namer.hpp  pm_table_names.toml  pm_table_reader.cpp  pm_table_reader.hpp  stress_tester.hpp
